# wgpu_renderer

./: Cargo.toml  LICENSE  README.md
renderer/: Cargo.toml
renderer/res/: cube.mtl  road.mtl  world.toml
renderer/src/: ampel.rs  camera.rs  light.wgsl  main.rs  model.rs  shader.wgsl  texture.rs  world.rs
res/: ampel_mit_mast_oben.mtl  color_torus.mtl  dragon.mtl  monkey4.mtl  road_centerpiece.mtl  teepott.mtl  world.toml
run-wasm/: Cargo.toml
src/: ampel.rs  camera.rs  light.wgsl  main.rs  model.rs  shader.wgsl  texture.rs  world.rs
