[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12.0"
winit = "0.26.1"
cgmath = "0.18.0"
env_logger = "0.9.0"
log = "0.4.14"
pollster = "0.2.5"
bytemuck = { version = "1.7.3", features = ["derive"] }
image = "0.23.14"
tobj = "3.2.0"
anyhow = "1.0.55"
egui = "0.16.1"
egui_wgpu_backend = "0.16.0"
egui_winit_platform = "0.13.0"
epi = "0.16.0"
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4"] }
glam = "0.20.2"

[build-dependencies]
anyhow = "1.0.55"
fs_extra = "1.2.0"
glob = "0.3.0"
